# osrs-decom

./: .gitignore  CMakeLists.txt  README.md
src/: cfg.cpp  cfg.h  cs2file.cpp  cs2file.h  instruction.cpp  instruction.h  main.cpp
